--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,6 +1,9 @@
 .header {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 85px;
+  padding: 0 60px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  opacity: 1;
 }
